# PasswordManager

./: AccountViewUI.cpp  AccountViewUI.h  CMakeLists.txt  KeyboardOption.h  MainController.cpp  MainController.h  MyCryptography.cpp  MyCryptography.h  PassAccount.h  README.md  StringExpansion.cpp  StringExpansion.h  UiSingleView.h  UiStateMachine.cpp  UiStateMachine.h  ViewTypes.h  main.cpp  passwordUI.cpp  passwordUI.h  startUI.cpp  startUI.h
PasswordFiles/: corrupted file (will not work)  example
